apps/nextcloud/resources/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud-db
  ingress:
    - ports:
        - port: postgresql
